[package]
name = "soroban-band-fixtures"
version = "0.1.0"
edition = "2021"
description = "Ready-to-use fixtures for Soroban band"

[dependencies]
soroban-band-core = { path = "../core" }
soroban-sdk.workspace = true
rust_decimal.workspace = true
num-traits.workspace = true
serde.workspace = true
soroban-token-sdk.workspace = true

[features]
default = []
